# pdf_converter

./: .gitignore  README.md  pyproject.toml
src/pdf_converter/: __init__.py  convert_single_pdf.py  convert_single_pdf2md.py  convert_single_pdf2txt.py  pdf2md.py  pdf2txt.py
