[project]
name = "pdf-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.30.0",
    "markdown>=3.8",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.21",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_converter"]