[project]
name = "pdf-converter"
version = "0.1.1"
description = "Convert PDF's to something more machine-readable"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.30.0",
    "markdown>=3.8",
    "pdfkit>=1.0.0",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.21",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_converter"]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
]
ignore = ["E501"]